linea del tiempo

--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -6,6 +6,9 @@
 <!--{{> addReunion}}-->
 <!--</body>-->
 
+<!--montevideo min 0 - max 1000 - fin 1500-->
+<!--tipita inicio 1200 - min 3000 - max 4000 - fin 4500-->
+<!---->
 <template name="Home">
     <!--<a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>-->
     <div  style="height:1000px; margin-bottom:-5px; width:100%;background-color: #2d3e54">
@@ -19,24 +22,24 @@
     <!--background-size: 110%;-->
     <!--background-repeat: no-repeat;-->
     <!--width: 100%;height: 500px;"> </div>-->
-        <div   data-0="transform: translate3d(0px, 0px, 0px);top:0%" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%" style="position: fixed;background-color:#2d3e54;background-position: center top;
+        <div   data-0="transform: translate3d(0px, 0px, 0px);top:0%" data-251="display:block; top:0%" data-700="top:0%" data-1100="display:none;top:-100%" style="position: fixed;background-color:#2d3e54;background-position: center top;
     background-size: 110%;
     background-repeat: no-repeat;
     width: 100%;height: 700px;"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -20px, 0px);"  data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%" style="background-image: url('layer0top.png'); position: fixed;background-position: center top;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -20px, 0px);"  data-501="display:block; top:0%" data-1000="top:0%" data-1150="display:none;top:-100%" style="background-image: url('layer0top.png'); position: fixed;background-position: center top;
     background-size: 110%;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -40px, 0px)"  data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-130%" style="margin-top:-100px;background-image: url('layer1top.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -40px, 0px)"  data-501="display:block; top:0%" data-1000="top:0%" data-1150="display:none;top:-130%" style="margin-top:-100px;background-image: url('layer1top.png');position: fixed;background-position: bottom center;
            background-size: auto;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -100px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-130%"  style="margin-left:-10px;margin-top:50px;background-image: url('layer2top.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -100px, 0px)" data-501="display:block; top:0%" data-1000="top:0%" data-1150="display:none;top:-130%"  style="margin-left:-10px;margin-top:50px;background-image: url('layer2top.png');position: fixed;background-position: bottom center;
            background-size: auto;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
@@ -44,65 +47,65 @@
         <!--facebokk-->
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1100px" data-4500="top:-1100px" data-5000="display:none;top:-2000px"  style="margin-top:800px;background-image: url('letrasTransición.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-1000="top:0px"    data-1150="top:-1100px" data-4000="top:-1100px" data-4500="display:none;top:-2000px"  style="margin-top:800px;background-image: url('letrasTransición.png');position: fixed;background-position: bottom center;
     width: 100%;height:550px"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1000px" data-4500="top:-1000px" data-5000="display:none;top:-2000px"  class="rotation-slow" style="margin-top:900px;background-image: url('letrasTipita2.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-1000="top:0px"    data-1150="top:-1000px" data-4000="top:-1000px" data-4500="display:none;top:-2000px"  class="rotation-slow" style="margin-top:900px;background-image: url('letrasTipita2.png');position: fixed;background-position: bottom center;
     width: 100%;height:550px"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-700px" data-3500="top:-1000px" data-4500="top:-1000px" data-5000="display:none;top:-2000px" class="rotation-very-slow"  style="margin-top:800px;left:-130px;background-image: url('letrasTipita.png');position: fixed;background-position: bottom left;
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-1000="top:0px"    data-1150="top:-1000px" data-4000="top:-1000px" data-4500="display:none;top:-2000px" class="rotation-very-slow"  style="margin-top:800px;left:-130px;background-image: url('letrasTipita.png');position: fixed;background-position: bottom left;
            background-size: auto 1038px;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-700px" data-3500="top:-900px" data-4500="top:-900px" data-5000="display:none;top:-2000px" style="margin-top:1000px;margin-left:30px;background-image: url('tipita.png');position: fixed;background-position: bottom left;
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-1000="top:0px"    data-1150="top:-900px" data-4000="top:-900px" data-4500="display:none;top:-2000px" style="margin-top:1000px;margin-left:30px;background-image: url('tipita.png');position: fixed;background-position: bottom left;
            background-size: auto;
     background-repeat: no-repeat;
     width: 50%;height: 1000px;"> </div>
 
-        <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" data-4500="display:block;top:50%" data-5000="display:none;top:-50%" style="margin-top:-90px;position: fixed;width:100%">
+        <div data-0="display:none" data-1500="display:block; top:0%" data-2500="display:block; top:50%" data-3000="display:block; top:50%" data-4000="display:block;top:50%" data-4500="display:none;top:-50%" style="margin-top:-90px;position: fixed;width:100%">
             <h1>
-                <span data-2000="margin-top:-900px" data-3000="margin-top:20px" data-3500="margin-top:0px" class="uniteALink" style="right:60px">A</span>
+                <span data-1500="margin-top:-900px" data-2500="margin-top:20px" data-3000="margin-top:0px" class="uniteALink" style="right:60px">A</span>
                 <!--<span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="uniteALink" style="right:115px"></span>-->
                 <!--<span data-1000="margin-top:-1000px" data-3200="margin-top:0px" data-3500="margin-top:0px" class="uniteALink" style="right:195px"></span>-->
-                <span data-2500="margin-top:-1000px" data-3000="margin-top:0px" data-3500="margin-top:0px" class="uniteALink" style="right:180px">E</span>
-                <span data-2500="margin-top:-800px" data-3300="margin-top:5px" data-3500="margin-top:0px" class="uniteALink" style="right:250px">T</span>
-                <span data-2500="margin-top:-1200px" data-3000="margin-top:-25px" data-3500="margin-top:0px" class="uniteALink" style="right:315px">I</span>
-                <span data-2500="margin-top:-900px" data-2900="margin-top:-10px" data-3500="margin-top:0px" class="uniteALink" style="right:358px">N</span>
-                <span data-2500="margin-top:-500px" data-3300="margin-top:0px" data-3500="margin-top:0px" class="uniteALink" style="right:426px">U</span>
+                <span data-2000="margin-top:-1000px" data-2500="margin-top:0px" data-3000="margin-top:0px" class="uniteALink" style="right:180px">E</span>
+                <span data-2000="margin-top:-800px" data-2800="margin-top:5px" data-3000="margin-top:0px" class="uniteALink" style="right:250px">T</span>
+                <span data-2000="margin-top:-1200px" data-2500="margin-top:-25px" data-3000="margin-top:0px" class="uniteALink" style="right:315px">I</span>
+                <span data-2000="margin-top:-900px" data-2400="margin-top:-10px" data-3000="margin-top:0px" class="uniteALink" style="right:358px">N</span>
+                <span data-2000="margin-top:-500px" data-2800="margin-top:0px" data-3000="margin-top:0px" class="uniteALink" style="right:426px">U</span>
             </h1>
         </div>
 
-        <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" data-4500="display:block;top:50%" data-5000="display:none;top:-50%" style="position: fixed;width:100%">
+        <div data-0="display:none" data-1500="display:block; top:0%" data-2500="display:block; top:50%" data-3000="display:block; top:50%" data-4000="display:block;top:50%" data-4500="display:none;top:-50%" style="position: fixed;width:100%">
             <h1>
-                <span data-2000="margin-top:-1000px" data-3000="margin-top:-20px" data-3500="margin-top:0px" class="facebookLink" style="right:40px">K</span>
-                <span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="facebookLink" style="right:115px">O</span>
-                <span data-1000="margin-top:-1000px" data-3200="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:195px">O</span>
-                <span data-2500="margin-top:-500px" data-3000="margin-top:50px" data-3500="margin-top:0px" class="facebookLink" style="right:275px">B</span>
-                <span data-2500="margin-top:-1000px" data-3300="margin-top:-15px" data-3500="margin-top:0px" class="facebookLink" style="right:355px">E</span>
-                <span data-2500="margin-top:-700px" data-3000="margin-top:-100px" data-3500="margin-top:0px" class="facebookLink" style="right:430px">C</span>
-                <span data-2500="margin-top:-1000px" data-3000="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:505px">A</span>
-                <span data-2500="margin-top:-1000px" data-3300="margin-top:15px" data-3500="margin-top:0px" class="facebookLink" style="right:580px">F</span>
-                <a data-2000="margin-top:-1000px;display:none" data-3000="margin-top:-10px;display:none" data-3300="margin-top:-97px;display:block" class="facebookLink-click" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank" style="cursor: pointer;position: fixed; width: 630px; height: 169px;right: 35px; margin-top:-97px; display: block;"></a>
+                <span data-1500="margin-top:-1000px" data-2500="margin-top:-20px" data-3000="margin-top:0px" class="facebookLink" style="right:40px">K</span>
+                <span data-2000="margin-top:-1000px" data-2500="margin-top:10px" data-3000="margin-top:0px" class="facebookLink" style="right:115px">O</span>
+                <span data-500="margin-top:-1000px" data-2700="margin-top:0px" data-3000="margin-top:0px" class="facebookLink" style="right:195px">O</span>
+                <span data-2000="margin-top:-500px" data-2500="margin-top:50px" data-3000="margin-top:0px" class="facebookLink" style="right:275px">B</span>
+                <span data-2000="margin-top:-1000px" data-2700="margin-top:-15px" data-3000="margin-top:0px" class="facebookLink" style="right:355px">E</span>
+                <span data-2000="margin-top:-700px" data-2500="margin-top:-100px" data-3000="margin-top:0px" class="facebookLink" style="right:430px">C</span>
+                <span data-2000="margin-top:-1000px" data-2500="margin-top:0px" data-3000="margin-top:0px" class="facebookLink" style="right:505px">A</span>
+                <span data-2000="margin-top:-1000px" data-2800="margin-top:15px" data-3000="margin-top:0px" class="facebookLink" style="right:580px">F</span>
+                <a data-1500="margin-top:-1000px;display:none" data-2500="margin-top:-10px;display:none" data-2800="margin-top:-97px;display:block" class="facebookLink-click" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank" style="cursor: pointer;position: fixed; width: 630px; height: 169px;right: 35px; margin-top:-97px; display: block;"></a>
             </h1>
         </div>
         <!--<div ata-0="transform: translate3d(0px, 0px, 0px);top:95%" data-1000="transform: translate3d(0px, -150px, 0px);top:100%" data-1001="display:block;bottom:100%" data-1500="top:100%" data-2000="top:80%" data-2500="top:50%" style="text-align:right;background-color:green;position: fixed;background-position: bottom right;"><h3><span >FACEBOOK</span></h3>-->
         <!--</div>-->
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-120%"   style="margin-top:800px;background-color:#357c8d;position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -150px, 0px)" data-501="display:block; top:0%" data-1000="top:0%" data-1150="display:none;top:-120%"   style="margin-top:800px;background-color:#357c8d;position: fixed;background-position: bottom center;
            background-size: auto;
     background-repeat: no-repeat;
     width: 100%;height: 400px;"> </div>
 
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-120%"   style="margin-top: 100px; background-image: url('layer3top.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -150px, 0px)" data-501="display:block; top:0%" data-1000="top:0%" data-1150="display:none;top:-120%"   style="margin-top: 100px; background-image: url('layer3top.png');position: fixed;background-position: bottom center;
            background-size: auto;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -30px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%"   style="margin-top:100px;background-image: url('logo.png');position: fixed;background-position: center top;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -30px, 0px)" data-501="display:block; top:0%" data-1000="top:0%" data-1150="display:none;top:-100%"   style="margin-top:100px;background-image: url('logo.png');position: fixed;background-position: center top;
     background-size: auto 190px;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
@@ -114,7 +117,7 @@
     <!--<div data-0="margin-top:10px" data-500="margin-top:100px">WOOOT</div>-->
     </div>
 
-    <div data-0="display:none;bottom:-50px" data-3400="display:block;" data-3500="bottom:0px" data-end="bottom:0px" class="bottom-menu">
+    <div data-0="display:none;bottom:-50px" data-2900="display:block;" data-3000="bottom:0px" data-end="bottom:0px" class="bottom-menu">
         <ul>
            <li class="horizontal-menu-item">NOSOTROS</li>
            <li class="horizontal-menu-item">FACEBOOK</li>
@@ -132,15 +135,15 @@
             <!--{{#each actividades}}-->
                 <!--{{>actividadItem}}-->
             <!--{{/each}}-->
-                <div data-0="display:none;top:200%" data-4500="display:block" data-5000="display:block;top:10%" data-5500="top:10%" data-6000="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
+                <div data-0="display:none;top:200%" data-4000="display:block" data-4500="display:block;top:10%" data-5000="top:10%" data-5500="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
                     <span class="uniteALink">asdasd</span>
                 </div>
 
-                <div data-0="display:none;top:200%" data-5500="display:block" data-6000="display:block;top:10%" data-6500="top:10%" data-7000="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
+                <div data-0="display:none;top:200%" data-5000="display:block" data-5500="display:block;top:10%" data-6000="top:10%" data-6500="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
                     <span class="uniteALink">asdas2d</span>
                 </div>
 
-                <div data-0="display:none;top:200%" data-6500="display:block" data-7000="display:block;top:10%" data-7500="top:10%" data-8000="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
+                <div data-0="display:none;top:200%" data-6000="display:block" data-6500="display:block;top:10%" data-7000="top:10%" data-7500="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
                     <span class="uniteALink">asdas2d</span>
                 </div>
 
