added background to events

--- a/imports/ui/users/actividadItem.html
+++ b/imports/ui/users/actividadItem.html
@@ -1,5 +1,7 @@
 <template name="actividadItem">
-    <div style="min-height:800px;background-color:green;margin:100px;">
-        <span class="uniteALink">{{nombre}}</span>
+    <div class="event-timeLine" style="position:fixed;width:100%;min-height:100%;padding:0;">
+        <div class="rotation-very-slow" style="background-position:center top;background-image:url('letras_lineadetiempo.png'); background-repeat: no-repeat;position:fixed;width:100%;min-height:100%;margin-top:0%;"></div>
+        <div class="rotation-slow" style="background-position:center top;background-image:url('letras_lineadetiempo2.png');background-repeat: no-repeat;position:fixed;width:100%;min-height:100%;margin-top:0%"></div>
     </div>
+
 </template>
