--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -132,20 +132,20 @@
 
 
         <div style="width:100%;margin-top:4500px;background-color:#2d3e54">
-            <!--{{#each actividades}}-->
-                <!--{{>actividadItem}}-->
-            <!--{{/each}}-->
-                <div data-0="display:none;top:200%" data-3000="display:block" data-3500="display:block;top:10%" data-4000="top:10%" data-4500="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
-                    <span class="uniteALink">asdasd</span>
-                </div>
+            {{#each actividades}}
+                {{>actividadItem}}
+            {{/each}}
+                <!--<div data-0="display:none;top:200%" data-3000="display:block" data-3500="display:block;top:10%" data-4000="top:10%" data-4500="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">-->
+                    <!--<span class="uniteALink">asdasd</span>-->
+                <!--</div>-->
 
-                <div data-0="display:none;top:200%" data-4000="display:block" data-4500="display:block;top:10%" data-5000="top:10%" data-5500="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
-                    <span class="uniteALink">asdas2d</span>
-                </div>
+                <!--<div data-0="display:none;top:200%" data-4000="display:block" data-4500="display:block;top:10%" data-5000="top:10%" data-5500="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">-->
+                    <!--<span class="uniteALink">asdas2d</span>-->
+                <!--</div>-->
 
-                <div data-0="display:none;top:200%" data-5000="display:block" data-5500="display:block;top:10%" data-6000="top:10%" data-6500="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
-                    <span class="uniteALink">asdas2d</span>
-                </div>
+                <!--<div data-0="display:none;top:200%" data-5000="display:block" data-5500="display:block;top:10%" data-6000="top:10%" data-6500="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">-->
+                    <!--<span class="uniteALink">asdas2d</span>-->
+                <!--</div>-->
 
                 <!--<div style="min-height:800px;background-color:green;margin:100px;">-->
                     <!--<span class="uniteALink">{{nombre}}</span>-->
