--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -128,7 +128,7 @@
         </ul>
     </div>
 
-    <div id="body" style="position:absolute;z-index:-1;width:100%; height:1000%;background-color:#2d3e54">
+    <div id="body" style="position:absolute;z-index:-1;width:100%; height:auto;background-color:#2d3e54">
 
 
         <div style="width:100%;margin-top:4500px;background-color:#2d3e54">
