--- a/imports/ui/users/actividadItem.html
+++ b/imports/ui/users/actividadItem.html
@@ -2,24 +2,58 @@
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="textualizer.js"></script>
 
-    <div id="itemEvent" class="event-timeLine" style="position:fixed;width:100%;height:100%;padding:0;">
-        <div class="rotation-very-slow" style="background-position:center top;background-image:url('letras_lineadetiempo.png'); background-repeat: no-repeat;position:fixed;width:100%;min-height:100%;margin-top:0%;"></div>
-        <div class="rotation-slow" style="background-position:center top;background-image:url('letras_lineadetiempo2.png');background-repeat: no-repeat;position:fixed;width:100%;min-height:100%;margin-top:0%"></div>
-        <div class="informacion-actividad">
+    <div id="itemEvent" class="event-timeLine" style="display:block;position:fixed;width:100%;height:100vh;padding:0;">
+        <!--only desktop-->
+        <div style="margin-left:auto;margin-right:auto;width:1000px;">
+        <div class="informacion-actividad desktopOnly">
            <span class="actividad-nombre">
-              <!--{{nombre}}-->
+               <div id="container">
+                  <div id="txtlzr" class="{{_id}}" >
+                     <p class="actividad-nombre">
+                       {{getRandomText}}
+                     </p>
+                     <p class="actividad-nombre">
+                       {{nombre}}
+                     </p>
+                  </div>
+               </div>
            </span>
-            <div id="container">
+            <span class="actividad-descripcion">
+               <div id="container">
+                  <div id="txtlzr-descripcion" class="{{_id}}texto">
+                     <p class="actividad-descripcion">
+                         {{getRandomTextDescripcion}}
+                     </p>
+                     <p class="actividad-descripcion">
+                         {{texto}}
+                     </p>
+                  </div>
+               </div>
+           </span>
+        </div>
 
-            <div id="txtlzr">
-               <p class="actividad-descripcion">
-                   {{getRandomText}}
-               </p>
-               <p class="actividad-descripcion">
-                  {{nombre}}
-               </p>
-           </div>
-            </div>
+        <!--mobile only-->
+        <div class="informacion-actividad mobileOnly">
+           <span class="actividad-nombre">
+               <div id="container">
+                     <p class="actividad-nombre">
+                         {{nombre}}
+                     </p>
+               </div>
+           </span>
+            <span class="actividad-descripcion">
+               <div id="container">
+                     <p class="actividad-descripcion">
+                         {{texto}}
+                     </p>
+               </div>
+           </span>
+        </div>
+
+        <!--<div class="template-dibujo" style="">-->
+            {{>teconmedialunas}}
+        <!--</div>-->
         </div>
     </div>
+
 </template>
