--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -12,7 +12,7 @@
 <template name="Home">
     <!--<a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>-->
 
-    <div   style="height:1000px; margin-bottom:-5px; width:100%;background-color: #2d3e54;z-index:-1 !important">
+    <div   class="no-height-mobil" style="height:1000px; margin-bottom:-5px; width:100%;background-color: #2d3e54;z-index:-1 !important">
 
         <!--<div data-0="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 30%, 25%), hsl(214, 30%, 25%));"-->
              <!--data-250 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 0%, 25%), hsl(214, 30%, 25%));"-->
