--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -66,6 +66,11 @@
     background-repeat: no-repeat;
     width: 50%;height: 1000px;"> </div>
 
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-900px" data-3000="top:-900px" data-3500="display:none;top:-2000px" style="margin-top:1335px;margin-left:30px;position: fixed;background-position: bottom left;">
+           <span class="{{satie}}">S</span>
+        </div>
+
+
         <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" style="margin-top:-90px;position: fixed;width:100%">
             <h1>
                 <span data-1000="margin-top:-900px" data-1800="margin-top:20px" data-2200="margin-top:0px" class="uniteALink" style="right:60px">A</span>
