--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -126,14 +126,14 @@
     <!--<div data-0="margin-top:10px" data-500="margin-top:100px">WOOOT</div>-->
     </div>
 
-    <div data-0="display:none;bottom:-50px" data-2000="display:block;" data-2200="bottom:0px" data-end="bottom:0px" class="bottom-menu">
+    <div data-0="display:none;bottom:-50px" data-2000="display:block;" data-2200="bottom:0px" data-end="bottom:0px" class="bottom-menu {{expandedMenuClass}}">
         <ul>
-           <li class="horizontal-menu-item">NOSOTROS</li>
-           <li class="horizontal-menu-item">FACEBOOK</li>
-           <li class="horizontal-menu-item">LIBROS LEIDOS</li>
-           <li class="horizontal-menu-item">RESEÑAS</li>
-           <li class="horizontal-menu-item">COLABORADORES</li>
-           <li class="horizontal-menu-item">ACTIVIDADES</li>
+           <li class="horizontal-menu-item {{isSelected "nosotros"}}" data-value="nosotros">NOSOTROS</li>
+           <li class="horizontal-menu-item {{isSelected "facebook"}}" data-value="facebook">FACEBOOK</li>
+           <li class="horizontal-menu-item {{isSelected "libros"}}" data-value="libros">LIBROS LEIDOS</li>
+           <li class="horizontal-menu-item {{isSelected "reseñas"}}" data-value="reseñas">RESEÑAS</li>
+           <li class="horizontal-menu-item {{isSelected "colaboradores"}}" data-value="colaboradores">COLABORADORES</li>
+           <!--<li class="horizontal-menu-item">ACTIVIDADES</li>-->
         </ul>
     </div>
 
