--- a/imports/ui/users/templatesImages/dragon.html
+++ b/imports/ui/users/templatesImages/dragon.html
@@ -1,5 +1,5 @@
 <template name="dragon">
-    <div class="right-continuos" style="z-index:-1;background-position:center left;background-image:url('dragon2.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
-    <div style="z-index:-1;background-position:center left;background-image:url('dragon.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
-    <div class="up-and-down" style="z-index:-1;background-position:center left;background-image:url('dragon1.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
+    <div class="mobile-margin-top right-continuos mobile-margin-left" style="z-index:-1;background-position:center left;background-image:url('dragon2.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
+    <div class="mobile-margin-top mobile-margin-left" style="z-index:-1;background-position:center left;background-image:url('dragon.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
+    <div class="up-and-down mobile-margin-top mobile-margin-left" style="z-index:-1;background-position:center left;background-image:url('dragon1.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
 </template>
