--- a/imports/ui/users/templatesImages/teconmedialunas.html
+++ b/imports/ui/users/templatesImages/teconmedialunas.html
@@ -1,4 +1,4 @@
 <template name="teconmedialunas">
-    <div style="z-index:-1;background-position:center left;background-image:url('teconmedialunas1.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
-    <div class="up-and-fadeout" style="z-index:-1;background-position:center left;background-image:url('teconmedialunas2.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
+    <div class="mobile-margin-top mobile-margin-right" style="z-index:-1;background-position:center left;background-image:url('teconmedialunas1.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
+    <div class="up-and-fadeout mobile-margin-top mobile-margin-right" style="z-index:-1;background-position:center left;background-image:url('teconmedialunas2.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
 </template>
