--- a/imports/ui/users/actividadItem.html
+++ b/imports/ui/users/actividadItem.html
@@ -5,7 +5,7 @@
     <div id="itemEvent" class="event-timeLine" style="display:block;position:fixed;width:100%;height:100vh;padding:0;">
         <!--only desktop-->
         <div style="margin-left:auto;margin-right:auto;width:1000px;">
-        <div class="informacion-actividad desktopOnly" style="{{#if rightTexto}}margin-left:20vw{{/if}}">
+        <div class="informacion-actividad desktopOnly" style="{{#if rightTexto}}margin-left:500px{{/if}}">
            <span class="actividad-nombre">
                <div id="container">
                   <div id="txtlzr" class="{{_id}}" >
