--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -144,7 +144,7 @@
         <div data-2900="top:100%" data-3400="top:0" class="rotation-very-slow" style="background-position:center top;background-image:url('letras_lineadetiempo.png'); background-repeat: no-repeat;position:fixed;width:100%;min-height:100vh;margin-top:0%"></div>
         <div data-2900="top:100%" data-3400="top:0" class="rotation-slow" style="background-position:center top;background-image:url('letras_lineadetiempo2.png');background-repeat: no-repeat;position:fixed;width:100%;min-height:100vh;margin-top:0%;top:0px;"></div>
 
-        <div style="z-index:6;width:100%;margin-top:4500px;background-color:#2d3e54">
+        <div style="z-index:6;width:100%;margin-top:4500px;height:100vh;background-color:#2d3e54">
 
             {{#each actividades}}
                 {{>actividadItem}}
