--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -154,6 +154,11 @@
 
 
     </div>
+
+    <div class="left-navigation">
+        <i class="navigation-button navigation-top fa fa-caret-up fa-2x" aria-hidden="true" style="color:white"></i>
+        <i class="navigation-button navigation-down fa fa-caret-down fa-2x" aria-hidden="true" style="color:white"></i>
+    </div>
     <script type="text/javascript" src="skrollr.min.js"></script>
 </template>
 
